<resources>
    <string name="app_name">Famous M
        arketing</string>
    <string name="sign_up">Sign UP</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="individuals">Individuals</string>
    <string name="enterprises">Enterprises</string>
    <string name="Famous_marketing">Famous Marketing</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="terms_and_conditions_accepted">Terms and Conditions Accepted</string>
    <string name="save">Save</string>
    <string name="recent_ads">Recent Ads</string>
    <string name="partners">Partners</string>
    <string name="sponsors">Sponsors</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="advertisements">Advertisements</string>
</resources>
