<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/ads"
            android:icon="@drawable/ads"
            android:title="@string/recent_ads" />
        <item
            android:id="@+id/partners"
            android:icon="@drawable/partners"
            android:title="@string/partners" />
        <item
            android:id="@+id/sponsors"
            android:icon="@drawable/sponsors"
            android:title="@string/sponsors" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/contactus"
            android:title="@string/contact_us"/>

        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about"/>
    </group>



</menu>
