<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FBE7"
    android:orientation="vertical"
    tools:context="com.example.android.welcomescreen.LoginPage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/famouspen" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/passimage"
        android:drawablePadding="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:shadowDx="1.2"
        android:shadowDy="1.2" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/passmagei"
        android:drawablePadding="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:shadowDx="1.2"
        android:shadowDy="1.2" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/round_background"
        android:text="@string/sign_in" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autoLink="all"
        android:gravity="right"
        android:text="@string/forgot_password" />


</LinearLayout>
